--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                             <li><strong>Wonmo Jang</strong> – <em class="text-gray-600">Seoul National University, Republic of Korea</em></li>
                             <li><strong>Helen Jordan</strong> – <em class="text-gray-600">University of Melbourne, Australia</em></li>
                             <li><strong>Rockli Kim</strong> – <em class="text-gray-600">Korea University, Republic of Korea</em></li>
-                            <li><strong>Saerom Kim</strong> – <em class="text-gray-600">Inje University, Republic of Korea</em></li>
+                            
                             <li><strong>Julia Lynch</strong> – <em class="text-gray-600">University of Pennsylvania, USA</em></li>
                             <li><strong>Shai Mulinari</strong> – <em class="text-gray-600">Lund University, Sweden</em></li>
                             <li><strong>Laura Sochas</strong> – <em class="text-gray-600">University of Edinburgh, UK</em></li>
@@ -451,7 +451,8 @@
                     <h4 class="text-xl font-semibold border-b-2 border-gray-300 pb-3 mb-4 font-serif">Editorial Consultants</h4>
                     <p class="text-gray-700 mb-4">A panel of distinguished experts offering advisory input on emerging topics, ethical standards, and regional representation.</p>
                     <ul class="space-y-2 text-gray-700">
-                        
+                            <li><strong>Saerom Kim</strong> – <em class="text-gray-600">Inje University, Republic of Korea</em></li>
+                            <li><strong>Daseul Moon</strong> – <em class="text-gray-600">People's Health Institute, Republic of Korea</em></li>
                     </ul>
                 </div>
             </div>
