--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <li><strong>Virginia Gunn</strong> – <em class="text-gray-600">Cape Breton University, Canada</em></li>
                             <li><strong>Lauri Kokkinen</strong> – <em class="text-gray-600">University of Helsinki, Finland</em></li>
                             <li><strong>Edwin Ng</strong> – <em class="text-gray-600">University of Waterloo, Canada</em></li>
-                            <li><strong>Rosina Somani</strong> – <em class="text-gray-600">University of Saskatchewan, Canada</em></li>
+                            <li><strong>Rozina Somani</strong> – <em class="text-gray-600">University of Saskatchewan, Canada</em></li>
                         </ul>
                     </div>
                     <div>
@@ -1005,3 +1005,4 @@
     </script>
 </body>
 </html>
+
