--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                         <p class="text-sm text-gray-500 italic mb-4">Being updated...</p>
                         <ul class="space-y-2 text-gray-700">
                             <li><strong>Virginia Gunn</strong> – <em class="text-gray-600">Cape Breton University, Canada</em></li>
-                            <li><strong>Lauri Kokkinen</strong> – <em class="text-gray-600">University of Helsinki, Finland</em></li>
+                            <li><strong>Lauri Kokkinen</strong> – <em class="text-gray-600">Tampere University, Finland</em></li>
                             <li><strong>Edwin Ng</strong> – <em class="text-gray-600">University of Waterloo, Canada</em></li>
                             <li><strong>Rozina Somani</strong> – <em class="text-gray-600">University of Saskatchewan, Canada</em></li>
                         </ul>
@@ -1005,4 +1005,5 @@
     </script>
 </body>
 </html>
+
 
